# kdb-templates

./: CMakeLists.txt
examples/: examples.cpp  pubsub.cpp
pubsub/: publisher.q  subscriber.q
